		enabled with ./configure --enable-newbinkp

	mbfido:
		The last argument '*' which was hardcoded in the virusscan
		function is removed, this should be done in the setup for the
		virus scanners.
		Added loging of virus scanner results.
		When a new echomail area is auto created, the creation date and
		the newsgroup name will be set.

	mbsebbs:
		Added loging of virus scanner results.

	mbsetup:
		Added auto setup for message area creation date. Also creates
		a faked newsgroup name in echomail areas. Both settings are
		needed for the (upcoming) newsserver.


v0.51.3		22-Mar-2003 - 11-Apr-2004

	general:
		Removed one setup entry for check for free diskspace, there
		were two different values for the same purpose. The removed
		one was not used.
		Moved doc directory from /opt/mbse/doc to /opt/mbse/share/doc.
		Added configure test for CPU optimization flags. Use with
		./configure --enable-optimize.
		Added charset kludges for CP852 2 and CP895 2, Czech Latin-2
		and Kamenicky. There are no mapping tables available.

	mbtask:
		Signal handler for sigchld set to sig_dfl, test for Fedora.
		Removed setup for old diskspace parameter.

	mbsetup:
		Added html sitedocs creation. The advantage of html over the
		old plain doc is to easy see crossreferences using hyperlinks.
		The html files are created in /opt/mbse/share/doc/html.
		The ~/doc/xref.doc and ~/doc/stat.doc are not created anymore,
		there was nothing in it yet.
		Removed setup for the unused free diskspace parameter.
		In nodes edit aka's it was not possible to delete aka's.
		Added nodes private data in the html sitedoc.

	mbfido:
		The area tags are now created in /opt/mbse/share/doc/tags.
		Added more debug info in Add_ToBeRep(), we still see double
		announces of files like FP-DEF.ZIP.
		Fixed (I hope for real now) the double announce of the files
		like FP-DEF.ZIP received twice a day.
		Fixed SIGCHLD logmessages on Fedora.

	mbfile:
		Fixed SIGCHLD logmessages on Fedora.

	mbdiff: