@@ -6,7 +6,7 @@ include ../Makefile.global
 SRCS		= mbnntp.c openport.c ttyio.c auth.c commands.c
 HDRS		= mbnntp.h openport.h ttyio.h auth.h commands.h
 OBJS		= mbnntp.o openport.o ttyio.o auth.o commands.o
-LIBS		+= ../lib/libmbse.a ../lib/libdbase.a ../lib/libmsgbase.a
+LIBS		+= ../lib/libmbse.a ../lib/libmsgbase.a ../lib/libdbase.a
 OTHER		= Makefile
 
 #############################################################################
@@ -55,9 +55,9 @@ depend:
 
 # DO NOT DELETE THIS LINE - MAKE DEPEND RELIES ON IT
 # Dependencies generated by make depend
-mbnntp.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/mbsedb.h openport.h ttyio.h auth.h commands.h mbnntp.h
+mbnntp.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/mbsedb.h ../lib/msg.h openport.h ttyio.h auth.h commands.h mbnntp.h
 openport.o: ../config.h ../lib/mbselib.h openport.h
 ttyio.o: ../config.h ../lib/mbselib.h ttyio.h
 auth.o: ../config.h ../lib/mbselib.h ../lib/users.h mbnntp.h auth.h
-commands.o: ../config.h ../lib/mbselib.h mbnntp.h commands.h
+commands.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/msg.h ../lib/msgtext.h ttyio.h mbnntp.h commands.h
 # End of generated dependencies
