@@ -3,6 +3,9 @@
 
 /* $Id$ */
 
-void command_list(char *);	    /* LIST		*/
+void command_abhs(char *);	    /* ARTICLE/BODY/HEADER/STAT	*/
+void command_group(char *);	    /* GROUP			*/
+void command_list(char *);	    /* LIST			*/
+void command_xover(char *);	    /* XOVER			*/
 
 #endif
